<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/city_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="What to do"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/places_to_see"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/places_to_see"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/invite_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.5"
        android:background="@drawable/button_rounded_corner"
        android:clickable="false"
        android:fontFamily="@font/poppins"
        android:text="Invite Friends"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@id/preview"
        app:layout_constraintTop_toBottomOf="@id/places_to_see"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.5"
        android:background="@drawable/button_rounded_corner"
        android:clickable="false"
        android:fontFamily="@font/poppins"
        android:text="Preview"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/places_to_see"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_fragment_sightseeing"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="158dp" />


    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:onClick="goBack"
        app:layout_constraintBottom_toBottomOf="@+id/city_text"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/city_text"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/back_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
